# pyqt-sql-demo

./: .gitignore  LICENCE  Pipfile  README.md  setup.cfg
pyqt_sql_demo/src/main/python/: main.py
pyqt_sql_demo/src/main/python/components/: connection_model.py  connection_widget.py  error_handler.py  exceptions.py  main_window.py
