[metadata]
name = pyqt-sql-demo
version = 1.0
description = QWidget based PyQt query executor demo
long_description = file: README.md
keywords = pyqt, sql, demo, sqlite, qwidget, qtableview
license = MIT
classifiers =
    Framework :: PyQt5
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Build Tools

[options]
zip_safe = False
packages =
    pyqt_sql_demo

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal=0
